<resources>
    <string name="app_name">AnyTask</string>
    <string name="search_task">Search</string>

    <string name="action_settings">Settings</string>
    <string name="action_sort">Sort</string>
    <string name="action_add">Add</string>
    <string name="action_clear">Clear</string>
    <string name="action_search">Search</string>

    <string name="username_text">Username</string>
    <string name="email_text">Email Address</string>
    <string name="password_text">Password</string>
    <string name="comfirmpass_text">Comfirm Password</string>
    <string name="welcome_text">WELCOME! </string>

    <string name="register_button">Register</string>
    <string name="login_button">Login</string>
    <string name="signup_button">Sign Up</string>

    <string name="notmatch_toast">Password does not match.</string>
    <string name="shortpass_toast">Password must be 8 CHARACTERS.</string>
    <string name="nologin_toast">Column cannot be empty.</string>
    <string name="textview">Remember to complete all your task:</string>
    <string name="successreg_toast">Register Success</string>

</resources>
