<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              app:layout_behavior="@string/appbar_scrolling_view_behavior"
              android:background="#BEFCF0">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/username_text"
        android:textAppearance="@style/TextAppearance.AppCompat.SearchResult.Title"
        />

    <EditText
        android:id="@+id/TFusername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:textSize="18sp"
        android:gravity="center_horizontal"/>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/email_text"
        android:textAppearance="@style/TextAppearance.AppCompat.SearchResult.Title"
        />

    <EditText
        android:id="@+id/TFemail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:textSize="18sp"
        android:gravity="center_horizontal"/>

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/password_text"
        android:textAppearance="@style/TextAppearance.AppCompat.SearchResult.Title"
        />

    <EditText
        android:id="@+id/TFpassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:textSize="18sp"
        android:gravity="center_horizontal"/>

    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/comfirmpass_text"
        android:textAppearance="@style/TextAppearance.AppCompat.SearchResult.Title"
        />

    <EditText
        android:id="@+id/TFcomfirmpass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="center_horizontal"
        android:inputType="textPassword"
        android:textSize="18sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="1">

        <Button
            android:id="@+id/BRegister"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.40"
            android:onClick="onRegisterClick"
            android:text="@string/register_button"
            android:textSize="20sp"/>

    </LinearLayout>

</LinearLayout>